<?xml version="1.0"?>
<package format="2">
  <name>opentera_webrtc_rosbridge_server</name>
  <version>0.1.0</version>
  <description>Provides a rosbridge implementation using OpenTera WebRTC data channels as the underlying transport layer</description>

  <maintainer email="philippe.warren@usherbrooke.ca">Philippe Warren</maintainer>
  <license>Apache-2.0</license>
  <url type="repository">https://github.com/introlab/opentera-webrtc-ros</url>
  <author email="philippe.warren@usherbrooke.ca">Philippe Warren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>message_generation</build_depend> -->
  <!-- <build_depend>opentera_webrtc_ros_msgs</build_depend> -->
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosbridge_library</exec_depend>
  <exec_depend>rosbridge_msgs</exec_depend>
  <exec_depend>rosapi</exec_depend>
  <exec_depend>rosauth</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>
