################################################################################
# Set minimum required version of cmake, project name and compile options
################################################################################
cmake_minimum_required(VERSION 3.8)

if (POLICY CMP0048)
    cmake_policy(SET CMP0048 NEW)
endif (POLICY CMP0048)
project(turtlebot3_beam_description)

################################################################################
# Find ament packages and libraries for ament and system dependencies
################################################################################
find_package(ament_cmake REQUIRED)

find_package(urdf REQUIRED)
find_package(xacro REQUIRED)

################################################################################
# Setup for python modules and scripts
################################################################################

################################################################################
# Declare ROS messages, services and actions
################################################################################

################################################################################
# Declare ROS dynamic reconfigure parameters
################################################################################

################################################################################
# Declare ament specific configuration to be passed to dependent projects
################################################################################
ament_export_dependencies(urdf xacro)

################################################################################
# Build
################################################################################

################################################################################
# Install
################################################################################
install(DIRECTORY meshes rviz urdf
    DESTINATION "share/${PROJECT_NAME}"
)

################################################################################
# Test
################################################################################

################################################################################
# Declare ament package
################################################################################
ament_package()
