<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>turtlebot3_beam_description</name>
    <version>1.2.6</version>
    <description>
        3D models of the TurtleBot3 for simulation and visualization
    </description>
    <license>Apache 2.0</license>
    <author email="pyo@robotis.com">Pyo</author>
    <author email="thlim@robotis.com">Darby Lim</author>
    <author email="kkjong@robotis.com">Gilbert</author>
    <maintainer email="willson@robotis.com">Will Son</maintainer>
    <url type="website">http://wiki.ros.org/turtlebot3_description</url>
    <url type="emanual">http://turtlebot3.robotis.com</url>
    <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
    <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>urdf</depend>
    <depend>xacro</depend>

    <export>
        <build_type>ament_cmake</build_type>
        <gazebo_ros gazebo_model_path="${prefix}/.."/>
    </export>
</package>
